Refactor all data fetching into state api central store

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,10 @@
 <html>
   <head></head>
+  <script type="text/javascript">
+    window.initialData = <%- JSON.stringify(initialData) -%>;
+  </script>
   <body>
-    <div id="root"><%- initialContent -%></div>
+    <div id="root"><%- initialMarkup -%></div>
     <script src="/bundle.js"></script>
   </body>
 </html>
